# ChangeLog for sys-libs/pam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/pam/ChangeLog,v 1.283 2010/11/07 17:42:02 constanze Exp $

  07 Nov 2010; Constanze Hausner <constanze@gentoo.org> pam-1.1.3.ebuild:
  Added condition for tallylog elog-output, see bug #344499

  03 Nov 2010; Markus Meier <maekke@gentoo.org> pam-1.1.3.ebuild:
  arm stable, bug #343399

  01 Nov 2010; Jeroen Roovers <jer@gentoo.org> pam-1.1.3.ebuild:
  Stable for HPPA PPC (bug #343399).

  01 Nov 2010; Mark Loeser <halcy0n@gentoo.org> pam-1.1.3.ebuild:
  Stable for ppc64; bug #343399

  01 Nov 2010; Tobias Klausmann <klausman@gentoo.org> pam-1.1.3.ebuild:
  Stable on alpha, bug #343399

  01 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> pam-1.1.3.ebuild:
  x86 stable wrt security bug #343399

  31 Oct 2010; Markos Chandras <hwoarang@gentoo.org> pam-1.1.3.ebuild:
  Stable on amd64 wrt bug #343399

*pam-1.1.3 (30 Oct 2010)

  30 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/Linux-PAM-1.0.2-noyp.patch, -pam-1.1.0.ebuild,
  -files/Linux-PAM-1.1.0-debug.patch, -files/Linux-PAM-1.1.0-nonls.patch,
  -files/Linux-PAM-1.1.0-xcrypt.patch, +pam-1.1.3.ebuild:
  Cleanup old version no longer relevant (and remove four patches); version
  bump with security fixes (bug #343399), also don't require autotools
  rebuild any longer since all our patches are merged.

  25 Oct 2010; Jeroen Roovers <jer@gentoo.org> pam-1.1.2.ebuild:
  Stable for HPPA (bug #341121).

  24 Oct 2010; Markus Meier <maekke@gentoo.org> pam-1.1.2.ebuild:
  arm stable, bug #341121

  24 Oct 2010; Brent Baude <ranger@gentoo.org> pam-1.1.2.ebuild:
  stable ppc, bug 341121

  22 Oct 2010; Christian Faulhammer <fauli@gentoo.org> pam-1.1.2.ebuild:
  stable x86, bug 341121

  22 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org> pam-1.1.1-r2.ebuild,
  pam-1.1.2.ebuild:
  Fix spelling error, thanks to Brant Gurganus in bug #342099.
