@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX Linux-PAM-0.99.8.1-xtests.patch 726 RMD160 4740f7039305c2520add212a576c9f16eb6c0db9 SHA1 716cd42c4c785db666b6c9911222760285a79e8f SHA256 6dbbadc4d9a5d08e55b381746dffd501bdd7dc07fdcb741b8ac95df07d5e1223
 AUX Linux-PAM-1.1.0-uclibc.patch 2643 RMD160 4294e27b8d90d8d9ee93c427d7eaf8af419f72f6 SHA1 aae4eb27892e1671c34d045a2d596d834aeb95e5 SHA256 b20ff20402778ff174694fe059afeecc6e8df8266d8ecae30419c7c930ffa5ae
 AUX Linux-PAM-1.1.1+berkdb-5.patch 473 RMD160 a03806a7406c97944b7efbd0cc624c219fa13c20 SHA1 1cd13c810fb1c967734e78c1fdec75e176261544 SHA256 76c9cea947452e1d15ab815df7052bf74e434ab598dde7e5afab8e46cf8c7dd0
@@ -6,12 +9,16 @@ AUX Linux-PAM-1.1.1-pam_tally2-mode.patch 670 RMD160 795e22f12753bc1d8609a51d36f
 AUX Linux-PAM-1.1.1-xcrypt.patch 867 RMD160 8742c63058f01198b3c0bc5e6c0a430c90c65b90 SHA1 0c8830ceb483ff071f2aa5722c16c52183b3de55 SHA256 447b85fd045c688fa995791f58c6be45e73dec071dd43ee9773df1a6b7eb0486
 DIST Linux-PAM-1.1.1-docs.tar.bz2 495534 RMD160 182639c3fa79c96dbc263f2d16346345949bb0c8 SHA1 9e25f276546844bb5a58f30b5e5d5a97d25c5af5 SHA256 89950180aba6e5e05671c43d970d9738fd2b71b1421a2cf4d504f5c529586ac6
 DIST Linux-PAM-1.1.1.tar.bz2 1120055 RMD160 2d3c39cb2c3542d380e1331fef08c7086cc829d9 SHA1 8baf11b04396230ba7cf8b2bfb2d2bd75aab8fa6 SHA256 608d3eb9d7a5e1a7505fff62e6a583fdb6e52dc05bf54dc9661c5f395b1fb904
-DIST Linux-PAM-1.1.2-docs.tar.bz2 495644 RMD160 e695b328eeb5d122f6bdd3793bacad43a3932828 SHA1 b6f5e2735c88e6505e7275c483c4499af8f56422 SHA256 7d336f696c4338dac7630fbb36c818c0dcfb59e180cf42361069a8bf6d422958
-DIST Linux-PAM-1.1.2.tar.bz2 1114503 RMD160 9758433b4189aa80c2e706eb0aaad1a5d07f931a SHA1 6655628f9770594158363915cf2ae415f253560b SHA256 b4f41864581fc9c4cfd7b7cb2a8858bc49605f19723c1a8e32b3c431ced9f698
 DIST Linux-PAM-1.1.3-docs.tar.bz2 495577 RMD160 d080055e8b2e2c213293e42d42d64082cd112915 SHA1 88024b6c99f1d5e9da1d12f7c04ca97779125d56 SHA256 4afc3c02f295ed1a3e09876da7eb8738ce48a3c8ea1bc0861e4999730489df12
 DIST Linux-PAM-1.1.3.tar.bz2 1132898 RMD160 626d8deabe5fb8fcc333b3b52fe5653e901bf352 SHA1 97d36d2b9af3211b4818ea8e6fcc6893ca1b6722 SHA256 17b268789b935a76e736a1150210dd12f156972973e79347668f828d43632652
 EBUILD pam-1.1.1-r2.ebuild 6534 RMD160 10f6695009088cddcfc1f9657b3932280c6ba3b5 SHA1 a73fc2c1cf851e165c39e5179e8e366ac3106091 SHA256 e1fc3075f8323ceb8de35573a7931da4bb8ea91ae5420ed55d8cf8b0103ec058
-EBUILD pam-1.1.2.ebuild 6023 RMD160 5f7d54d76dd034c6d2e971adffa6df2ca156fef0 SHA1 1b8d68d7500ded8cad8b202f42e5bf4e847bfb4d SHA256 aaece85f1b7ba4888be39612d12a440ca959c644e3171426585e036a395d0d78
-EBUILD pam-1.1.3.ebuild 5611 RMD160 eea6e70f9ee671358aa12286b38c65a2c579aab3 SHA1 061cc5d7b91eae1e78d14b9d0b66607ad1b9003e SHA256 ae7a0de856199902979ec457ca092cddf60cbc3de365d246345239bc3b067bf2
-MISC ChangeLog 45158 RMD160 98856190202f9d3c123d2591af36650c179be67e SHA1 201186c91dbeaab599eabf276c19e3affbeb79a0 SHA256 57c45be0a180552190d7bcaf57397c50af6c2113a4e632c07235c5c27cc8dddd
+EBUILD pam-1.1.3.ebuild 5675 RMD160 f44903ef23b446b7fb87dcd91d3c26e62058bace SHA1 1892540f38bb0b21c5c550ee623ca4dabca77557 SHA256 3ed84076d596f05fa1567f6bd326f7b389d7f48349acb25e3d0caa86a41c7577
+MISC ChangeLog 45367 RMD160 27fa0d49f709a427feeb8bcde4a1a56e41e74c4a SHA1 36a3443eae5dc77b7185eb10a59076faf01b6aae SHA256 9306dd0b19a0ee411e16cf80c8fe83da2d20e17f9fd2eab06c82fd3f598d4b91
 MISC metadata.xml 1129 RMD160 a800f5ac4255ca20c26791ff0b57c3c923666623 SHA1 99e58550271cf1c3e23c4547387469a0d211ae55 SHA256 e160643aca26e0418b31429836ae1b4c673474cd6130b7e2ac0d0bf41380df0b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkzcO6gACgkQAiZjviIA2XgjTACg3Qn61pqGewIzsjEqYwrPzell
+TYwAmQGqKvHqLO9aFLsRfiAgBjD9uTi8
+=i14G
+-----END PGP SIGNATURE-----
