@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/pam
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/pam/ChangeLog,v 1.283 2010/11/07 17:42:02 constanze Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/pam/ChangeLog,v 1.284 2010/11/11 18:53:41 flameeyes Exp $
+
+  11 Nov 2010; Diego E. Pettenò <flameeyes@gentoo.org> -pam-1.1.2.ebuild,
+  pam-1.1.3.ebuild:
+  Remove old version no longer needed, fix up the lsof syntax to check for
+  services that need to be restarted.
 
   07 Nov 2010; Constanze Hausner <constanze@gentoo.org> pam-1.1.3.ebuild:
   Added condition for tallylog elog-output, see bug #344499
